--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -11,8 +11,7 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApp2": "Server=(localdb)\\mssqllocaldb;Database=WebApp2-7dc6;Trusted_Connection=True;MultipleActiveResultSets=true"
-    // "WebApp2": "Server=database-2.cyybybhev14y.us-east-1.rds.amazonaws.com,1433;Database=WebApp2;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;Integrated Security=false; User Id=admin; Password=password"
-    //"HangfireConnection": "Server=(localdb)\\mssqllocaldb;Database=HangFire;User ID=sa; pwd=sa;Integrated Security=true;"
+   // "Resturant":"Server=localhost;Database=Resturant;User Id=postgres;Password=postgres"
+   "DefaultConnection":"Host=localhost;Port=5432;Database=Resturant;Username=postgres;Password=postgres"
   }
 }
