--- a/Application/Resturant.Application.csproj
+++ b/Application/Resturant.Application.csproj
@@ -24,5 +24,9 @@
 		<ProjectReference Include="..\Domain\Resturant.Domain.csproj" />
 	
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="HandleCart\Query\" />
+	</ItemGroup>
 	
 </Project>
