--- a/Infrastructure/Resturant.Infrastructure.csproj
+++ b/Infrastructure/Resturant.Infrastructure.csproj
@@ -13,6 +13,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.5" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.3">
 	    <PrivateAssets>all</PrivateAssets>
